gitops/espresso/apps/healthlog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthlog
  labels:
    pod-security.kubernetes.io/enforce: baseline
