gitops/espresso/apps/healthlog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthlog
  namespace: healthlog
spec:
  selector:
    app: healthlog
  ports:
    - name: http
      port: 3000
      targetPort: http
