gitops/espresso/apps/healthlog/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthlog
  namespace: healthlog
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - health.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: healthlog
          port: 3000
